--- a/USB_Firmware_Design/STM32_Project/KeyBoard/KeyBoard.ioc
+++ b/USB_Firmware_Design/STM32_Project/KeyBoard/KeyBoard.ioc
@@ -33,6 +33,7 @@ Mcu.UserConstants=
 Mcu.UserName=STM32F042K6Tx
 MxCube.Version=6.10.0
 MxDb.Version=DB.6.0.100
+NVIC.EXTI4_15_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -67,7 +68,7 @@ PA2.Signal=USART2_TX
 PA6.GPIOParameters=GPIO_Label
 PA6.GPIO_Label=Key
 PA6.Locked=true
-PA6.Signal=GPIO_Input
+PA6.Signal=GPXTI6
 PB3.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
 PB3.GPIO_Label=LED_Green
 PB3.GPIO_PuPd=GPIO_PULLUP
@@ -82,10 +83,10 @@ PF0-OSC_IN.Mode=HSE-External-Clock-Source
 PF0-OSC_IN.Signal=RCC_OSC_IN
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
-ProjectManager.BackupPrevious=false
+ProjectManager.BackupPrevious=true
 ProjectManager.CompilerOptimize=6
 ProjectManager.ComputerToolchain=false
-ProjectManager.CoupleFile=false
+ProjectManager.CoupleFile=true
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
@@ -121,7 +122,7 @@ RCC.FamilyName=M
 RCC.HCLKFreq_Value=48000000
 RCC.HSICECFreq_Value=32786.88524590164
 RCC.I2SFreq_Value=48000000
-RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,VCOOutput2Freq_Value
+RCC.IPParameters=AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,CECFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSICECFreq_Value,I2SFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USART1Freq_Value,USBFreq_Value,VCOOutput2Freq_Value
 RCC.MCOFreq_Value=48000000
 RCC.PLLCLKFreq_Value=16000000
 RCC.PLLMCOFreq_Value=16000000
@@ -129,7 +130,10 @@ RCC.SYSCLKFreq_VALUE=48000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_HSI48
 RCC.TimSysFreq_Value=48000000
 RCC.USART1Freq_Value=48000000
+RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
+SH.GPXTI6.0=GPIO_EXTI6
+SH.GPXTI6.ConfNb=1
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=HID
