--- a/USB_Firmware_Design/STM32_Project/KeyBoard/KeyBoard.ioc
+++ b/USB_Firmware_Design/STM32_Project/KeyBoard/KeyBoard.ioc
@@ -18,7 +18,7 @@ Mcu.Name=STM32F042K(4-6)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PA2
-Mcu.Pin10=VP_USB_DEVICE_VS_USB_DEVICE_HID_FS
+Mcu.Pin10=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 Mcu.Pin2=PA6
 Mcu.Pin3=PA11
 Mcu.Pin4=PA12
@@ -136,17 +136,15 @@ SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
-USB_DEVICE.CLASS_NAME_FS=HID
-USB_DEVICE.CONFIGURATION_STRING_HID_FS=HID Config
-USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STRING,CONFIGURATION_STRING_HID_FS,PRODUCT_STRING_HID_FS
+USB_DEVICE.CLASS_NAME_FS=CUSTOM_HID
+USB_DEVICE.IPParameters=VirtualMode,VirtualModeFS,CLASS_NAME_FS,MANUFACTURER_STRING
 USB_DEVICE.MANUFACTURER_STRING=ZRZ
-USB_DEVICE.PRODUCT_STRING_HID_FS=ZRZ_Keyboard
-USB_DEVICE.VirtualMode=Hid
-USB_DEVICE.VirtualModeFS=Hid_FS
+USB_DEVICE.VirtualMode=CustomHid
+USB_DEVICE.VirtualModeFS=Custom_Hid_FS
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
-VP_USB_DEVICE_VS_USB_DEVICE_HID_FS.Mode=HID_FS
-VP_USB_DEVICE_VS_USB_DEVICE_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_HID_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Mode=CUSTOM_HID_FS
+VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 board=NUCLEO-F042K6
 boardIOC=true
 isbadioc=false
