--- a/USB_Firmware_Design/STM32_Project/KeyBoard/KeyBoard.ioc
+++ b/USB_Firmware_Design/STM32_Project/KeyBoard/KeyBoard.ioc
@@ -10,15 +10,17 @@ Mcu.Family=STM32F0
 Mcu.IP0=NVIC
 Mcu.IP1=RCC
 Mcu.IP2=SYS
-Mcu.IP3=USART2
-Mcu.IP4=USB
-Mcu.IP5=USB_DEVICE
-Mcu.IPNb=6
+Mcu.IP3=TIM2
+Mcu.IP4=USART2
+Mcu.IP5=USB
+Mcu.IP6=USB_DEVICE
+Mcu.IPNb=7
 Mcu.Name=STM32F042K(4-6)Tx
 Mcu.Package=LQFP32
 Mcu.Pin0=PF0-OSC_IN
 Mcu.Pin1=PA2
-Mcu.Pin10=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
+Mcu.Pin10=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin11=VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 Mcu.Pin2=PA6
 Mcu.Pin3=PA11
 Mcu.Pin4=PA12
@@ -27,7 +29,7 @@ Mcu.Pin6=PA14
 Mcu.Pin7=PA15
 Mcu.Pin8=PB3
 Mcu.Pin9=VP_SYS_VS_Systick
-Mcu.PinsNb=11
+Mcu.PinsNb=12
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F042K6Tx
@@ -40,6 +42,7 @@ NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.SVC_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
 NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:false
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:true\:true\:true
 NVIC.USB_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true
 PA11.Mode=Device
 PA11.Signal=USB_DM
@@ -65,8 +68,10 @@ PA2.GPIO_Label=VCP_TX
 PA2.Locked=true
 PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
-PA6.GPIOParameters=GPIO_Label
+PA6.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
 PA6.GPIO_Label=Key
+PA6.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING_FALLING
+PA6.GPIO_PuPd=GPIO_PULLDOWN
 PA6.Locked=true
 PA6.Signal=GPXTI6
 PB3.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label
@@ -134,6 +139,10 @@ RCC.USBFreq_Value=48000000
 RCC.VCOOutput2Freq_Value=8000000
 SH.GPXTI6.0=GPIO_EXTI6
 SH.GPXTI6.ConfNb=1
+TIM2.AutoReloadPreload=TIM_AUTORELOAD_PRELOAD_ENABLE
+TIM2.IPParameters=AutoReloadPreload,Prescaler,Period
+TIM2.Period=399
+TIM2.Prescaler=7199
 USART2.IPParameters=VirtualMode-Asynchronous
 USART2.VirtualMode-Asynchronous=VM_ASYNC
 USB_DEVICE.CLASS_NAME_FS=CUSTOM_HID
@@ -143,6 +152,8 @@ USB_DEVICE.VirtualMode=CustomHid
 USB_DEVICE.VirtualModeFS=Custom_Hid_FS
 VP_SYS_VS_Systick.Mode=SysTick
 VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Mode=CUSTOM_HID_FS
 VP_USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS.Signal=USB_DEVICE_VS_USB_DEVICE_CUSTOM_HID_FS
 board=NUCLEO-F042K6
